--- a/photos.html
+++ b/photos.html
@@ -176,7 +176,7 @@ Dare mighty things. -Theodore Roosevelt,
  
 </div> 
 <div id="imageText">
-FIRST LOCATION TEXT HERE
+First location here, 
 </div>
 
 		
