--- a/photos.html
+++ b/photos.html
@@ -171,7 +171,7 @@ Dare mighty things. -Theodore Roosevelt,
 </div>		
 	
 	
-<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",
+<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",>
 
 ",   
      
