--- a/photos.html
+++ b/photos.html
@@ -175,7 +175,7 @@ Dare mighty things. -Theodore Roosevelt,
 	
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",>
      
-<div id="imageText">
+<div id="locationsText">
 First location here
 </div>
     	
