--- a/photos.html
+++ b/photos.html
@@ -69,33 +69,33 @@ var imageText = [
 		
 
 var locations = [		
-	"Loc1",
-	"Loc2",
-	"Loc3",
-	"Loc4",
-	"Loc5",
-	"Loc6",
-	"Loc7",
-	"Loc8",
-	"Loc9",
-	"Loc10",
-	"Loc11",
-	"Loc12",
-	"Loc13",
-	"Loc14",
-	"Loc15",
-	"Loc16",
-	"Loc17",
-	"Loc18",
-	"Loc19",
-	"Loc20",
-	"Loc21",
-	"Loc22",
-	"Loc23",
-	"Loc24",
-	"Loc25",
-	"Loc26",
-	"Loc27",
+	"Kingston, 2016",
+	"Buenos Aires, 2008",
+	"Times Square, 2014",
+	"Detroit, 2018"
+	"Masi Mara, 2007",
+	"Grant Park, 2009",
+	"Fez, 2011",
+	"Rio, 2008",
+	"Cotopaxi, 2012",
+	"High Atlas Mountains, 2011",
+	"Chiang Mai, 2015",
+	"Field Museum, 2008",
+	"Paris, 2016",
+	"Train to Casablanca, 2011",
+	"The Met, 2014",
+	"Hanoi, 2005",
+	"Quito, 2007",
+	"Shibuya, 2019",
+	"Iguazu, 2008",
+	"Sofia, 2016",
+	"Ephesus, 2010",
+	"Ljubljana, 2016",
+	"Sahara, 2011",
+	"Brooklyn, 2014",
+	"Bangkok, 2015",
+	"Paris, 2016",
+	"Sydney, 2008",
 	
 ];		
 	
@@ -176,7 +176,7 @@ Dare mighty things. -Theodore Roosevelt,
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",>
      
 <div id="locationsText">
-First location here
+Kingston, 2016
 </div>
     	
 </div>		
