--- a/photos.html
+++ b/photos.html
@@ -176,7 +176,7 @@ Dare mighty things. -Theodore Roosevelt,
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",>
      
 <div id="locationsText">
-Kingston, 2016,
+Kingston. 2016
 </div>
     	
 </div>		
