--- a/photos.html
+++ b/photos.html
@@ -95,7 +95,7 @@ var locations = [
 	"Brooklyn, 2014",
 	"Bangkok, 2015",
 	"Paris, 2016",
-	"Sydney, 2008"
+	"Sydney, 2008",
 	
 ];		
 	
@@ -176,7 +176,7 @@ Dare mighty things. -Theodore Roosevelt,
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",>
      
 <div id="locationsText">
-Kingston. 2016
+Kingston (2016)
 </div>
     	
 </div>		
