--- a/photos.html
+++ b/photos.html
@@ -72,7 +72,7 @@ var locations = [
 	"Kingston, 2016",
 	"Buenos Aires, 2008",
 	"Times Square, 2014",
-	"Detroit, 2018"
+	"Detroit, 2018",
 	"Masi Mara, 2007",
 	"Grant Park, 2009",
 	"Fez, 2011",
