--- a/photos.html
+++ b/photos.html
@@ -69,33 +69,33 @@ var imageText = [
 		
 
 var locations = [		
-	"Kingston, 2016",
-	"Buenos Aires, 2008",
-	"Times Square, 2014",
-	"Detroit, 2018",
-	"Masi Mara, 2007",
-	"Grant Park, 2009",
-	"Fez, 2011",
-	"Rio, 2008",
-	"Cotopaxi, 2012",
-	"High Atlas Mountains, 2011",
-	"Chiang Mai, 2015",
-	"Field Museum, 2008",
-	"Paris, 2016",
-	"Train to Casablanca, 2011",
-	"The Met, 2014",
-	"Hanoi, 2005",
-	"Quito, 2007",
-	"Shibuya, 2019",
-	"Iguazu, 2008",
-	"Sofia, 2016",
-	"Ephesus, 2010",
-	"Ljubljana, 2016",
-	"Sahara, 2011",
-	"Brooklyn, 2014",
-	"Bangkok, 2015",
-	"Paris, 2016",
-	"Sydney, 2008",
+	"Kingston (2016)",
+	"Buenos Aires (2008)",
+	"Times Square (2014)",
+	"Detroit (2018)",
+	"Masi Mara (2007)",
+	"Grant Park (2009)",
+	"Fez (2011)",
+	"Rio (2008)",
+	"Cotopaxi (2012)",
+	"High Atlas Mountains (2011)",
+	"Chiang Mai (2015)",
+	"Field Museum (2008)",
+	"Paris (2016)",
+	"Train to Casablanca (2011)",
+	"The Met (2014)",
+	"Hanoi (2005)",
+	"Quito, (2007)",
+	"Shibuya (2019)",
+	"Iguazu, (2008)",
+	"Sofia (2016)",
+	"Ephesus, (2010)",
+	"Ljubljana (2016)",
+	"Sahara (2011)",
+	"Brooklyn (2014)",
+	"Bangkok (2015)",
+	"Paris (2016)",
+	"Sydney (2008)",
 	
 ];		
 	
