--- a/photos.html
+++ b/photos.html
@@ -85,11 +85,11 @@ var locations = [
 	"Train to Casablanca (2011)",
 	"The Met (2014)",
 	"Hanoi (2005)",
-	"Quito, (2007)",
+	"Quito (2007)",
 	"Shibuya (2019)",
-	"Iguazu, (2008)",
+	"Iguazu (2008)",
 	"Sofia (2016)",
-	"Ephesus, (2010)",
+	"Ephesus (2010)",
 	"Ljubljana (2016)",
 	"Sahara (2011)",
 	"Brooklyn (2014)",
