--- a/photos.html
+++ b/photos.html
@@ -87,7 +87,7 @@ var locations = [
 	"Hanoi (2005)",
 	"Quito (2007)",
 	"Shibuya (2019)",
-	"Iguazu (2008)",
+	"Victoria Falls (2019)",
 	"Sofia (2016)",
 	"Ephesus (2010)",
 	"Ljubljana (2016)",
