--- a/photos.html
+++ b/photos.html
@@ -53,7 +53,7 @@ var imageText = [
 "If you think you're free, there's no escape possible. -Ram Dass",
 "Those who seek absolute power, even though they seek it to do what they regard as good, are simply demanding the right to enforce their own version of heaven on earth. And let me remind you, they are the very ones who always create the most hellish tyrannies. Absolute power does corrupt, and those who seek it must be suspect and must be opposed. - Barry Goldwater",
 "My name is Ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
-"Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
+"God is on the side with the best artillery -Napoleon Bonaparte",
 "Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
