--- a/photos.html
+++ b/photos.html
@@ -4,8 +4,8 @@ permalink: /photos/
 ---		
 <script>		
 var imageGallery = [		
-	"http://qasaryounis.com/assets/jam.jpg",
 	"http://qasaryounis.com/assets/beach.jpg",
+	"http://qasaryounis.com/assets/jam.jpg",
 	"http://qasaryounis.com/assets/nyc.jpg",
 	"http://qasaryounis.com/assets/air.jpg",
 	"http://qasaryounis.com/assets/ken2.jpg",
@@ -70,7 +70,7 @@ var imageText = [
 
 var locations = [		
 	"Kingston (2016)",
-	"Buenos Aires (2008)",
+	"Essaouira (2010)",
 	"Times Square (2014)",
 	"Detroit (2018)",
 	"Masi Mara (2007)",
@@ -170,10 +170,10 @@ function handlePhotoClick(event, img) {
 </div>		
 
 <div id="imageText">
-Dare mighty things. -Theodore Roosevelt,
+Photography is not like painting. There is a creative fraction of a second when you are taking a picture. Your eye must see a composition or an expression that life itself offers you, and you must know with intuition when to click the camera. -Henri Cartier-Bresson
 </div>		
 	
-<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",>
+<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/beach.jpg",>
      
 <div id="locationsText">
 Kingston (2016)
