--- a/photos.html
+++ b/photos.html
@@ -176,7 +176,7 @@ Photography is not like painting. There is a creative fraction of a second when 
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/beach.jpg",>
      
 <div id="locationsText">
-Kingston (2016)
+Essaouira (2010)
 </div>
     	
 </div>		
