--- a/photos.html
+++ b/photos.html
@@ -85,7 +85,7 @@ var locations = [
 	"Train to Casablanca (2011)",
 	"The Met (2014)",
 	"Hanoi (2005)",
-	"Quito (2007)",
+	"Trafalgar Square (2012)",
 	"Shibuya (2019)",
 	"Victoria Falls (2019)",
 	"Sofia (2016)",
