--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include nav.html %}
 <div class="content list">
-<img src="{{ site.baseurl }}/assets/work.jpg" style="border-radius: 0px;"/>
+<img src="{{ site.baseurl }}/assets/work.jpg" class="hero-image" style="border-radius: 0px;"/>
 <!--
 {% for post in site.posts %}
   <div class="list-item">
