--- a/photos.html
+++ b/photos.html
@@ -4,33 +4,33 @@ permalink: /photos/
 ---		
 <script>		
 var imageGallery = [		
-	"http://qasaryounis.com/assets/beach.jpg",
-	"http://qasaryounis.com/assets/jam.jpg",
-	"http://qasaryounis.com/assets/nyc.jpg",
-	"http://qasaryounis.com/assets/air.jpg",
-	"http://qasaryounis.com/assets/ken2.jpg",
-	"http://qasaryounis.com/assets/chi.jpg",		
-	"http://qasaryounis.com/assets/tan.jpg",	
-	"http://qasaryounis.com/assets/arg.jpg",	
-	"http://qasaryounis.com/assets/ecu.jpg",
-	"http://qasaryounis.com/assets/ess.jpg",
-	"http://qasaryounis.com/assets/lag.jpg",		
-	"http://qasaryounis.com/assets/mor.jpg",
-	"http://qasaryounis.com/assets/paris.jpg",
-	"http://qasaryounis.com/assets/mor3.png",	
-	"http://qasaryounis.com/assets/power.jpg",	
-	"http://qasaryounis.com/assets/viet.jpg",
-	"http://qasaryounis.com/assets/traf.jpg",
-	"http://qasaryounis.com/assets/tokyo2.jpg",
-	"http://qasaryounis.com/assets/vic.jpg",
-	"http://qasaryounis.com/assets/sof.jpg",
-	"http://qasaryounis.com/assets/tur.jpg",
-	"http://qasaryounis.com/assets/slo.jpg",
-	"http://qasaryounis.com/assets/mor1.jpg",
-	"http://qasaryounis.com/assets/cop.jpg",
-	"http://qasaryounis.com/assets/tha.jpg",
-	"http://qasaryounis.com/assets/pass.jpg",
-	"http://qasaryounis.com/assets/church.png",
+	"https://qasaryounis.com/assets/beach.jpg",
+	"https://qasaryounis.com/assets/jam.jpg",
+	"https://qasaryounis.com/assets/nyc.jpg",
+	"https://qasaryounis.com/assets/air.jpg",
+	"https://qasaryounis.com/assets/ken2.jpg",
+	"https://qasaryounis.com/assets/chi.jpg",		
+	"https://qasaryounis.com/assets/tan.jpg",	
+	"https://qasaryounis.com/assets/arg.jpg",	
+	"https://qasaryounis.com/assets/ecu.jpg",
+	"https://qasaryounis.com/assets/ess.jpg",
+	"https://qasaryounis.com/assets/lag.jpg",		
+	"https://qasaryounis.com/assets/mor.jpg",
+	"https://qasaryounis.com/assets/paris.jpg",
+	"https://qasaryounis.com/assets/mor3.png",	
+	"https://qasaryounis.com/assets/power.jpg",	
+	"https://qasaryounis.com/assets/viet.jpg",
+	"https://qasaryounis.com/assets/traf.jpg",
+	"https://qasaryounis.com/assets/tokyo2.jpg",
+	"https://qasaryounis.com/assets/vic.jpg",
+	"https://qasaryounis.com/assets/sof.jpg",
+	"https://qasaryounis.com/assets/tur.jpg",
+	"https://qasaryounis.com/assets/slo.jpg",
+	"https://qasaryounis.com/assets/mor1.jpg",
+	"https://qasaryounis.com/assets/cop.jpg",
+	"https://qasaryounis.com/assets/tha.jpg",
+	"https://qasaryounis.com/assets/pass.jpg",
+	"https://qasaryounis.com/assets/church.png",
 	
 ];		
 		
@@ -173,7 +173,7 @@ function handlePhotoClick(event, img) {
 Photography is not like painting. There is a creative fraction of a second when you are taking a picture. Your eye must see a composition or an expression that life itself offers you, and you must know with intuition when to click the camera. -Henri Cartier-Bresson
 </div>		
 	
-<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/beach.jpg",>
+<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"https://qasaryounis.com/assets/beach.jpg",>
      
 <div id="locationsText">
 Essaouira (2010)
