--- a/photos.html
+++ b/photos.html
@@ -4,7 +4,7 @@ permalink: /photos/
 ---		
 <script>		
 var imageGallery = [		
-	"https://qasaryounis.com/assets/beach.jpg",
+	"https://qasaryounis.com/assets/bike.jpg",
 	"https://qasaryounis.com/assets/jam.jpg",
 	"https://qasaryounis.com/assets/nyc.jpg",
 	"https://qasaryounis.com/assets/air.jpg",
@@ -173,7 +173,7 @@ function handlePhotoClick(event, img) {
 Photography is not like painting. There is a creative fraction of a second when you are taking a picture. Your eye must see a composition or an expression that life itself offers you, and you must know with intuition when to click the camera. -Henri Cartier-Bresson
 </div>		
 	
-<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"https://qasaryounis.com/assets/beach.jpg",>
+<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"https://qasaryounis.com/assets/bike.jpg",>
      
 <div id="locationsText">
 Essaouira (2010)
