--- a/photos.html
+++ b/photos.html
@@ -69,7 +69,7 @@ var imageText = [
 		
 
 var locations = [		
-	"Essaouira (2010)",
+	"Buenos Aires (2009)",
 	"Kingston (2016)",
 	"Times Square (2014)",
 	"Detroit (2018)",
