--- a/photos.html
+++ b/photos.html
@@ -176,7 +176,7 @@ Photography is not like painting. There is a creative fraction of a second when 
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"https://qasaryounis.com/assets/bike.JPG",>
      
 <div id="locationsText">
-Essaouira (2010)
+Buenos Aires (2009)
 </div>
     	
 </div>		
