--- a/photos.html
+++ b/photos.html
@@ -31,6 +31,8 @@ var imageGallery = [
 	"https://qasaryounis.com/assets/tha.jpg",
 	"https://qasaryounis.com/assets/pass.jpg",
 	"https://qasaryounis.com/assets/church.png",
+	"https://qasaryounis.com/assets/fujifilm.jpg",
+
 	
 ];		
 		
@@ -63,7 +65,9 @@ var imageText = [
 "The true measure of a man is how he treats someone who can do him absolutely no good. -Samuel Johnson",
 "If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama",
 "In the republic of mediocrity, genius is dangerous. -Robert G. Ingersoll",
+"At about three o'clock, Jesus cried out in a loud voice, 'My God! My God! Why have you abandoned me!' -Matthew 27:46",
 "At about three o'clock, Jesus cried out in a loud voice, 'My God! My God! Why have you abandoned me!' -Matthew 27:46"
+
 	
 ];
 		
