--- a/photos.html
+++ b/photos.html
@@ -66,7 +66,7 @@ var imageText = [
 "If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama",
 "In the republic of mediocrity, genius is dangerous. -Robert G. Ingersoll",
 "At about three o'clock, Jesus cried out in a loud voice, 'My God! My God! Why have you abandoned me!' -Matthew 27:46",
-"At about three o'clock, Jesus cried out in a loud voice, 'My God! My God! Why have you abandoned me!' -Matthew 27:46"
+"These are a collection of photos I've taken over the years. The quotes I've attached with photos are often related to the photo but not always. I shoot with a Fujifilm X100F. Before this camera, I shot with a Fujifilm X100S. They are both fixed lens 35mm equivalent cameras."
 
 	
 ];
@@ -100,7 +100,7 @@ var locations = [
 	"Bangkok (2015)",
 	"Paris (2016)",
 	"Sydney (2008)",
-	"Sydni (2008)",
+	"Sunnyvale (2020)",
 
 	
 ];		
