--- a/photos.html
+++ b/photos.html
@@ -177,7 +177,7 @@ function handlePhotoClick(event, img) {
 Photography is not like painting. There is a creative fraction of a second when you are taking a picture. Your eye must see a composition or an expression that life itself offers you, and you must know with intuition when to click the camera. -Henri Cartier-Bresson
 </div>		
 	
-<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"https://qasaryounis.com/assets/bike.JPG",>
+<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"https://qy.co/assets/bike.JPG",>
      
 <div id="locationsText">
 Buenos Aires (2009)
