--- a/photos.html
+++ b/photos.html
@@ -181,7 +181,7 @@ Photography is not like painting. There is a creative fraction of a second when 
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"https://qy.co/assets/bike.JPG",>
      
 <div id="locationsText">
-Buenos Aires (2009)
+Kingston (2016)
 </div>
     	
 </div>		
