--- a/photos.html
+++ b/photos.html
@@ -73,6 +73,7 @@ var imageText = [
 		
 
 var locations = [		
+	"Buenos Aires (2009)",
 	"Kingston (2016)",
 	"Times Square (2014)",
 	"Detroit (2018)",
@@ -181,9 +182,8 @@ Photography is not like painting. There is a creative fraction of a second when 
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"https://qy.co/assets/bike.JPG",>
      
 <div id="locationsText">
-Kingston (2016)
-</div>
-    	
+Buenos Aires (2009)
+</div>    	
 </div>		
 </div>
 
