--- a/photos.html
+++ b/photos.html
@@ -91,7 +91,7 @@ var locations = [
 	"Hanoi (2005)",
 	"Trafalgar Square (2012)",
 	"Shibuya (2019)",
-	"Victoria Falls (2019)",
+	"Iguazu Falls (2009)",
 	"Sofia (2016)",
 	"Ephesus (2010)",
 	"Ljubljana (2016)",
