--- a/photos.html
+++ b/photos.html
@@ -45,13 +45,13 @@ var imageText = [
 "We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
 "I am by nature war-like. To attack is my instinct. -Nietzsche",
 "Art washes away from the soul the dust of everyday life. -Pablo Picasso",
-"Governments exist to protect the rights of minorities. The loved and the rich need no protection: they have many friends and few enemies. - Wendell Phillips",
+"He who studies how things originated, will achieve the clearest view of them. -Aristotle",
 "Don't hit at all if it is honorably possible. But never hit soft. -Theodore Roosevelt",
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
 "To a mind that is still, the whole universe surrenders. -Chuang-Tzu",
 "I prayed for twenty years but received no answer until I prayed with my legs. -Frederick Douglass",		
 "I am Time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
-"The best way to find yourself is to lose yourself in the service of others. -Mohandas Gandhi",
+"By protecting others, you save yourself. If you only think of yourself, you'll only destroy yourself. -Akira Kurosawa",
 "If you think you're free, there's no escape possible. -Ram Dass",
 "Those who seek absolute power, even though they seek it to do what they regard as good, are simply demanding the right to enforce their own version of heaven on earth. And let me remind you, they are the very ones who always create the most hellish tyrannies. Absolute power does corrupt, and those who seek it must be suspect and must be opposed. - Barry Goldwater",
 "My name is Ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
