--- a/photos.html
+++ b/photos.html
@@ -66,7 +66,7 @@ var imageText = [
 "If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama",
 "In the republic of mediocrity, genius is dangerous. -Robert G. Ingersoll",
 "At about three o'clock, Jesus cried out in a loud voice, 'My God! My God! Why have you abandoned me!' -Matthew 27:46",
-"These are a collection of photos I've taken over the years. The quotes I've attached with photos are often related to the photo but not always. I shoot with a Fujifilm X100F. Before this camera, I shot with a Fujifilm X100S. They are both fixed lens 35mm equivalent cameras."
+"These are a collection of photos I've taken over the years. The quotes I've attached to the photos are often related to them but not always. I now shoot with a Leica M11P, but not a single photo in this set was taken with that camera. Almost all the photos are from when I used a Fujifilm X100F, which I shot with for over 10 years. Both setups are, in practice, based on a 35mm focal length."
 
 	
 ];
