Fix HTTPS warning on /new redirect page by using absolute HTTPS URLs

--- a/new.html
+++ b/new.html
@@ -6,14 +6,14 @@ permalink: /new/
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=/writings/newqasar/">
-  <link rel="canonical" href="/writings/newqasar/">
+  <meta http-equiv="refresh" content="0; url=https://qy.co/writings/newqasar/">
+  <link rel="canonical" href="https://qy.co/writings/newqasar/">
   <script>
-    window.location.href = "/writings/newqasar/";
+    window.location.href = "https://qy.co/writings/newqasar/";
   </script>
 </head>
 <body>
-  <p>Redirecting to <a href="/writings/newqasar/">the essay</a>...</p>
+  <p>Redirecting to <a href="https://qy.co/writings/newqasar/">the essay</a>...</p>
 </body>
 </html>
 
