Add Twitter Card preview meta tags to /new redirect page

--- a/new.html
+++ b/new.html
@@ -6,6 +6,23 @@ permalink: /new/
 <html>
 <head>
   <meta charset="utf-8">
+  <title>I miss the old Qasar, not the new Qasar</title>
+  <meta name="description" content="After many years of railing against going on Twitter/X, I'm finally pulling the band-aid and getting on the platform.">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://qy.co/new/">
+  <meta property="og:title" content="I miss the old Qasar, not the new Qasar">
+  <meta property="og:description" content="After many years of railing against going on Twitter/X, I'm finally pulling the band-aid and getting on the platform.">
+  <meta property="og:image" content="https://qy.co/assets/essay-previews/default.png">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@qasar">
+  <meta name="twitter:title" content="I miss the old Qasar, not the new Qasar">
+  <meta name="twitter:description" content="After many years of railing against going on Twitter/X, I'm finally pulling the band-aid and getting on the platform.">
+  <meta name="twitter:image" content="https://qy.co/assets/essay-previews/default.png">
+  
   <meta http-equiv="refresh" content="0; url=https://qy.co/writings/newqasar/">
   <link rel="canonical" href="https://qy.co/writings/newqasar/">
   <script>
