Update main image to tom5t.png with hover tooltip and enhance navigation hover styling
- Changed main hero image from work.jpg to tom5t.png
- Added hover tooltip showing 'Design by tom5t' (with italicized tom5t) centered below image
- Fixed missing name field in _config.yml (name now appears in navigation)
- Enhanced navigation hover: added bold font-weight on hover for better visibility
- Fixed overflow issues to prevent tooltip clipping
- Updated Jekyll config: moved jekyll-seo-tag to plugins section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: default
 ---
 {% include nav.html %}
 <div class="content list">
-<img src="{{ site.baseurl }}/assets/work.jpg" class="hero-image" style="border-radius: 0px;"/>
+<span class="hero-image-wrapper">
+<img src="{{ site.baseurl }}/assets/tom5t.png" class="hero-image" style="border-radius: 0px;"/>
+<span class="tooltip">Design by <em>tom5t</em></span>
+</span>
 <!--
 {% for post in site.posts %}
   <div class="list-item">
