--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 {% include nav.html %}
 <div class="content list">
 <span class="hero-image-wrapper">
-<img src="{{ site.baseurl }}/assets/tom5t.png" class="hero-image" style="border-radius: 0px;"/>
+<img src="{{ site.baseurl }}/assets/tom5t-adobe-license.png" class="hero-image" style="border-radius: 0px;"/>
 <span class="tooltip">Design by <em>tom5t</em></span>
 </span>
 <!--
