--- a/photos.html
+++ b/photos.html
@@ -116,10 +116,12 @@ var locations = [
 var imgCount = 0;		
 var totalImgs = imageGallery.length -1;		
 
-function preloadImages() {
-  for (var i = 0; i < imageGallery.length; i++) {
-    img1 = new Image();
-    img1.src = imageGallery[i];
+function preloadImages(startIndex) {
+  // Preload images starting from startIndex (to avoid duplicate preloading)
+  startIndex = startIndex || 0;
+  for (var i = startIndex; i < imageGallery.length; i++) {
+    var img = new Image();
+    img.src = imageGallery[i];
   }
 }
 		
@@ -189,7 +191,7 @@ Photography is not like painting. There is a creative fraction of a second when 
 {% else %}
 {% assign base_url = site.url %}
 {% endif %}
-<img id="gallery" onclick="handlePhotoClick(event, this)"  src="{{ base_url }}/assets/bike.JPG">
+<img id="gallery" onclick="handlePhotoClick(event, this)" src="{{ base_url }}/assets/bike.JPG" loading="eager" fetchpriority="high" decoding="async">
      
 <div id="locationsText">
 Buenos Aires (2009)
@@ -201,5 +203,21 @@ Buenos Aires (2009)
 <script>
 document.getElementById('currentImage').innerHTML = imgCount + 1
 document.getElementById('totalImages').innerHTML = imageGallery.length
-preloadImages()
+
+// Optimized preloading: start immediately for first few, then use requestIdleCallback for rest
+if ('requestIdleCallback' in window) {
+  // Preload first 3 images immediately (critical)
+  for (var i = 0; i < Math.min(3, imageGallery.length); i++) {
+    var img = new Image();
+    img.fetchPriority = 'high';
+    img.src = imageGallery[i];
+  }
+  // Preload rest when browser is idle (starting from index 3 to avoid duplicates)
+  requestIdleCallback(function() {
+    preloadImages(3);
+  }, { timeout: 2000 });
+} else {
+  // Fallback: preload all images
+  preloadImages(0);
+}
 </script>
