Remove fetchpriority and decoding attributes to test if they cause build failure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 {% include nav.html %}
 <div class="content list">
 <span class="hero-image-wrapper">
-<img src="{{ site.baseurl }}/assets/tom5t-adobe-license.png" class="hero-image" style="border-radius: 0px;" loading="eager" fetchpriority="high" decoding="async" width="800" height="600"/>
+<img src="{{ site.baseurl }}/assets/tom5t-adobe-license.png" class="hero-image" style="border-radius: 0px;" loading="eager" width="800" height="600"/>
 <span class="tooltip">Design by <em>tom5t</em></span>
 </span>
 <!--
