--- a/photos.html
+++ b/photos.html
@@ -191,7 +191,7 @@ Photography is not like painting. There is a creative fraction of a second when 
 {% else %}
 {% assign base_url = site.url %}
 {% endif %}
-<img id="gallery" onclick="handlePhotoClick(event, this)" src="{{ base_url }}/assets/bike.JPG" loading="eager" fetchpriority="high" decoding="async">
+<img id="gallery" onclick="handlePhotoClick(event, this)" src="{{ base_url }}/assets/bike.JPG" loading="eager">
      
 <div id="locationsText">
 Buenos Aires (2009)
